--- a/Github/github/pom.xml
+++ b/Github/github/pom.xml
@@ -5,8 +5,13 @@
   <artifactId>github</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>github</name>
+  <name>github</name> 
   <url>http://maven.apache.org</url>
+  <properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+          
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
